# pygmalion

./: Cargo.toml  README.md
.github/workflows/: ci.yml
lexer/: Cargo.toml
lexer/src/: token.rs
pygmalion/: Cargo.toml
pygmalion-lexer/: Cargo.toml  README.md
pygmalion-lexer/src/: token.rs
pygmalion-utils/: Cargo.toml  README.md
pygmalion-utils/src/: cli.rs  file_io.rs  lib.rs
pygmalion/src/: lib.rs  main.rs
tests-integration/: Cargo.toml
tests-integration/tests/: cli_analysis.rs
utils/: Cargo.toml
utils/src/: cli.rs  file_io.rs  lib.rs  token.rs
