[package]
name = "pygmalion-lexer"
version = "0.1.0"
edition = "2021"
authors = ["Can Vardar <https://github.com/icanvardar"]
description = "A module that provides the core lexical analysis functionality for the Pygmalion Solidity lexer."
readme = "README.md"
repository = "https://github.com/icanvardar/pygmalion/tree/main/pygmalion-lexer"
license = "MIT"
license-file = "LICENSE"
keywords = ["pygmalion", "lexer"]

[dependencies]
logos = { version = "0.14.0" }
