[package]
name = "pygmalion"
version = "0.1.0"
edition = "2021"
authors = ["Can Vardar <https://github.com/icanvardar"]
description = "Pygmalion, yet another Solidity lexer written in Rust!"
readme = "../README.md"
repository = "https://github.com/icanvardar/pygmalion"
license = "MIT"
license-file = "../LICENSE"
keywords = ["pygmalion", "lexer"]

[dependencies]
pygmalion-lexer = { path = "../pygmalion-lexer", version = "0.1.0" }
pygmalion-utils = { path = "../pygmalion-utils", version = "0.1.0" }
logos = { version = "0.14.0" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
