[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
pygmalion-lexer = { path = "../pygmalion-lexer" }
pygmalion-utils = { path = "../pygmalion-utils" }
logos = { version = "0.14.0" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }

[[test]]
name = "cli_analysis"
path = "./tests/cli_analysis.rs"
